--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
   <body>
-    No data of any kind is collected, shared, or stored.
+    No data of any kind is collected, shared, or stored outside of your local device. 
+    All data processed by rem remains on your device and is not accessible to us or any third parties, unless you provide direct access, which is outside of our control.
+    We recommend you do not provide any other apps, serivces, or individuals direct access to your data.
+    Your data can be deleted at any time either manually by visiting "Show Me My Data", or automatically with "Purge All Data".
   </body>
 </html>
