--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     All data processed by rem remains on your device and is not accessible to us or any third parties, unless you provide direct access, which is outside of our control.
     We recommend you do not provide any other apps, serivces, or individuals direct access to your data.
     Your data can be deleted at any time either manually by visiting "Show Me My Data", or automatically with "Purge All Data".
+    We reserve the right to make any necessary modifications to this policy in the future.
+    <br />
+    rem Privacy Policy 2023
   </body>
 </html>
