--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <html>
+  <head>
+    <style>
+      body {
+        max-width: 800px;
+        margin: auto;
+      }
+    </style>
+  </head>
   <body>
     <p>
     No data of any kind is collected, shared, or stored outside of your local device. 
