--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </style>
   </head>
   <body>
+    <h1>Privacy Policy</h1>
     <p>
     No data of any kind is collected, shared, or stored outside of your local device. 
     All data processed by rem remains on your device and is not accessible to us or any third parties, unless you provide direct access, which is outside of our control.
@@ -15,7 +16,5 @@
     Your data can be deleted at any time either manually by visiting "Show Me My Data", or automatically with "Purge All Data".
     We reserve the right to make any necessary modifications to this policy in the future.
     </p>
-    <br />
-    <span>rem Privacy Policy 2023</span>
   </body>
 </html>
